--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3"
+  },
+  "engines": {
+    "node": "16.x"
   }
+
 }
