--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "start": "next start",
-    "postinstall": "pnpm rebuild bcrypt"
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -29,6 +28,4 @@
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3"
   }
-
-
 }
